<resources>
    <string name="app_name">Restaurant Manager</string>

    <string name="add_new_order">Add new order</string>
    <string name="manage_orders">Manage orders</string>
    <string name="create_order">Create order</string>

    <string name="table_number">Table number</string>
    <string name="table_number_is">Table №%1$d</string>

    <string name="guests_number">Guests number</string>
    <string name="guests_number_is">Number of guests is %1$d</string>

    <string name="add_new_meal">Add new meal</string>
    <string name="create_meal">Create meal</string>

    <string name="meal_name">Meal name</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>

    <string name="display_role">Role: %1$s</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="moderators">List of Moderators</string>

<!--Bottom navigation menu -->
    <string name="orders">Orders</string>
    <string name="delivery">Delivery</string>
    <string name="account">Account</string>

    <string name="share">Share</string>
    <string name="search_restaurant">Search for restaurant</string>

    <string name="order_document">Order document</string>
    <string name="open_document">%1$s</string>

</resources>
